feat(router): add cache handler when in development mode
